Update sidebar menu description text

--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
       <div class="brand">
         <div>
           <h1>Biblioteca de Aulas</h1>
-          <small>Menu em árvore • Busca em modal • Tema claro/escuro</small>
+          <small>Menu • Busca • Tema claro/escuro</small>
         </div>
         <div class="brandActions">
           <button class="btn" id="homeBtn" type="button" title="Voltar ao estado inicial">Início</button>
